# fxckwhales

./: .gitignore  Anchor.toml  Anchor.toml.bak-devnet  Cargo.toml  DEVNET_STATE.txt  README.md  ROADMAP.md  package-lock.json  package.json  tsconfig.json
assets/: demo.cast
cli/: index.ts
cli/commands/: addWhitelist.ts  initConfig.ts  removeWhitelist.ts  smokeDevnet.ts
cli/utils/: program.ts
client/: .env  create_extra_metas.js  create_mint_hook.js  index.js  initialize.js  package-lock.json  package.json  simulate_pool.js
migrations/: deploy.ts
programs/fxckwhales/: Cargo.toml
programs/fxckwhales/src/: hook.rs  lib.rs  state.rs
scripts/: smoke-devnet.ts
tests/: fxckwhales.ts  hook-real.ts  hook-real.ts.bak  hook.ts
