[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
[patch.crates-io]
# los que ya tenías:
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3", tag = "1.5.0" }

spl-transfer-hook-interface = { git = "https://github.com/solana-labs/solana-program-library", rev = "88547d85c1cbe63feb2f79160d3070075a9e156a" }
spl-tlv-account-resolution  = { git = "https://github.com/solana-labs/solana-program-library", rev = "88547d85c1cbe63feb2f79160d3070075a9e156a" }
spl-type-length-value       = { git = "https://github.com/solana-labs/solana-program-library", rev = "88547d85c1cbe63feb2f79160d3070075a9e156a" }
spl-pod                     = { git = "https://github.com/solana-labs/solana-program-library", rev = "88547d85c1cbe63feb2f79160d3070075a9e156a" }
spl-program-error           = { git = "https://github.com/solana-labs/solana-program-library", rev = "88547d85c1cbe63feb2f79160d3070075a9e156a" }
spl-program-error-derive    = { git = "https://github.com/solana-labs/solana-program-library", rev = "88547d85c1cbe63feb2f79160d3070075a9e156a" }
spl-discriminator           = { git = "https://github.com/solana-labs/solana-program-library", rev = "88547d85c1cbe63feb2f79160d3070075a9e156a" }
spl-discriminator-derive    = { git = "https://github.com/solana-labs/solana-program-library", rev = "88547d85c1cbe63feb2f79160d3070075a9e156a" }
spl-discriminator-syn       = { git = "https://github.com/solana-labs/solana-program-library", rev = "88547d85c1cbe63feb2f79160d3070075a9e156a" }
spl-associated-token-account = { git = "https://github.com/solana-labs/solana-program-library", rev = "88547d85c1cbe63feb2f79160d3070075a9e156a" }

# ✅ AQUI: deja SOLO las de PATH (y borra cualquiera spl-token/spl-token-2022 que sea git)
spl-token = { path = "vendor/spl-token-4.0.0" }
spl-token-2022 = { path = "vendor/spl-token-2022-0.9.0" }

# ✅ el patch de wit-bindgen también (si lo tienes)
wit-bindgen = { path = "vendor/wit-bindgen-0.51.0" }


[workspace.dependencies]
num_enum = "=0.6.1"
num_enum_derive = "=0.6.1"
borsh = "=0.10.3"
borsh-derive = "=0.10.3"
[patch."https://github.com/solana-labs/solana-program-library"]
spl-token = { path = "vendor/spl-token-4.0.0" }
spl-token-2022 = { path = "vendor/spl-token-2022-0.9.0" }




