[package]
name = "fxckwhales"
version = "0.1.0"
description = "Anti-whale transfer hook program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fxckwhales"

[features]
default = ["no-entrypoint"]
no-entrypoint = []
cpi = []
anchor-debug = []
no-idl = []
no-log-ix-name = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"

# Fijadas explícitamente para evitar workspace inheritance en Anchor 0.28
num_enum = "0.6.1"
num_enum_derive = "0.6.1"
borsh = "0.10.3"
borsh-derive = "0.10.3"

# Compatible con Anchor 0.28 / Solana 1.16.x
solana-program = "1.16.25"

# SPL transfer-hook stack
spl-transfer-hook-interface = { git = "https://github.com/solana-labs/solana-program-library", rev = "88547d85c1cbe63feb2f79160d3070075a9e156a", default-features = false }
spl-tlv-account-resolution  = { git = "https://github.com/solana-labs/solana-program-library", rev = "88547d85c1cbe63feb2f79160d3070075a9e156a", default-features = false }
spl-type-length-value       = { git = "https://github.com/solana-labs/solana-program-library", rev = "88547d85c1cbe63feb2f79160d3070075a9e156a", default-features = false }

# Necesarias para hook.rs
spl-token = "3.5.0"
spl-token-2022 = "0.6.1"

