[package]
name = "fxckwhales"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fxckwhales"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
spl-token-2022 = { version = "0.6.1", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.3.0"
spl-tlv-account-resolution = "0.4.0"
